packages/isar/test/errors/property/reserved_name.dart
// reserved keyword

import 'package:isar/isar.dart';

@collection
class Model {
  late int id;

  String? prop1;

  String? unique;
}
